signup with gem devise

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,8 +17,13 @@
             <li><a href="mylive.html" style="color: white">Live now</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-            <li><a href="profile.html" style="color: white">Profile</a></li>
-            <li><a href="dangnhap.html" style="color: white">Đăng xuất</a></li>
+            
+            <% if user_signed_in? %>
+                <li><a href="profile.html" style="color: white">Profile</a></li>
+                <li class="nav-item">
+                    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+                </li>
+            <% end %>
             </ul>
         </div>
     </div>
