--- a/app/views/rooms/party.html.erb
+++ b/app/views/rooms/party.html.erb
@@ -1,46 +1,53 @@
-<div id="invitation"></div>
-<div id="videobox" style="margin: 100px">
-
-</div>
-<script src="https://static.opentok.com/v2/js/opentok.min.js" type="text/javascript"></script>
-<script type="text/javascript">
-  var apiKey =  "46228102";
-  var sessionId = "<%= @room.session_id %>";
-  var token = "<%= @tok_token %>";
-  var session;
-
-//  TB.addEventListener('exception', exceptionHandler);
-
-  //Video chat event listeners
-  //session.addEventListener('sessionConnected', sessionConnectedHandler);
-  //session.addEventListener('streamCreated', streamCreatedHandler);
-    //session.addEventListener('streamDestroyed', streamDestroyedHandler);
-TB.setLogLevel(TB.DEBUG);
-//session.connect(apiKey, token);
-   var session = TB.initSession(sessionId);
-    session.addEventListener('sessionConnected', sessionConnectedHandler);
-    session.addEventListener('streamCreated', streamCreatedHandler);
-    session.connect(apiKey, token);
- var publisher;
-    function sessionConnectedHandler(event) {
-      publisher = TB.initPublisher(apiKey, 'videobox');
-      session.publish(publisher);
-      // Subscribe to streams that were in the session when we connected
-      subscribeToStreams(event.streams);
-    }
-    function streamCreatedHandler(event) {
-      // Subscribe to any new streams that are created
-      subscribeToStreams(event.streams);
-    }
-    function subscribeToStreams(streams) {
-      for (var i = 0; i < streams.length; i++) {
-        if (streams[i].connection.connectionId == session.connection.connectionId) {
-          return;
+<div class= "row">
+  <div class="col-xs-6 col-sm-6 col-md-6" style="padding-top: 100px">
+    <h5> <%= current_user.email %> </h5>
+    <div id="videobox" style="margin: 100px">
+    </div>
+  </div>
+  <div class="col-xs-6 col-sm-6 col-md-6" style="padding-top: 100px">
+    <script src="https://static.opentok.com/v2/js/opentok.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      var apiKey =  "46228102";
+      var sessionId = "<%= @room.session_id %>";
+      var token = "<%= @tok_token %>";
+      var session;
+    
+    //  TB.addEventListener('exception', exceptionHandler);
+    
+      //Video chat event listeners
+      //session.addEventListener('sessionConnected', sessionConnectedHandler);
+      //session.addEventListener('streamCreated', streamCreatedHandler);
+        //session.addEventListener('streamDestroyed', streamDestroyedHandler);
+    TB.setLogLevel(TB.DEBUG);
+    //session.connect(apiKey, token);
+      var session = TB.initSession(sessionId);
+        session.addEventListener('sessionConnected', sessionConnectedHandler);
+        session.addEventListener('streamCreated', streamCreatedHandler);
+        session.connect(apiKey, token);
+    var publisher;
+        function sessionConnectedHandler(event) {
+          publisher = TB.initPublisher(apiKey, 'videobox');
+          session.publish(publisher);
+          // Subscribe to streams that were in the session when we connected
+          subscribeToStreams(event.streams);
         }
-        var div = document.createElement('div');
-        div.setAttribute('id', 'stream' + streams[i].streamId);
-        document.body.appendChild(div);
-        session.subscribe(streams[i], div.id);
-      }
-    }
-</script>
+        function streamCreatedHandler(event) {
+          // Subscribe to any new streams that are created
+          subscribeToStreams(event.streams);
+        }
+        function subscribeToStreams(streams) {
+          for (var i = 0; i < streams.length; i++) {
+            if (streams[i].connection.connectionId == session.connection.connectionId) {
+              return;
+            }
+            var div = document.createElement('div');
+            div.setAttribute('class', 'col-xs-6');
+            div.setAttribute('id', 'stream' + streams[i].streamId);
+            document.body.appendChild(div);
+            session.subscribe(streams[i], div.id);
+          }
+        }
+    </script>
+  </div>
+</div>
+
